kubernetes/network/pori-graphkb-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: graphkb-client-ingress
  namespace: graphkb
spec:
  ingressClassName: nginx
  rules:
  - host: graphkb
    http:
      paths:
      - backend:
          service:
            name: client
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: api
            port:
              number: 8080
        path: /api
        pathType: Prefix
